# lab-client

./: .gitignore  Makefile  README.md  hello.py  mkdocs.yml  pyproject.toml  requirements.runtime.txt
.github/workflows/: deps.yml
clients/: base_client.py  laser_base_clients.py  laser_clients.py  osa_clients.py
docs/: authentication.md  index.md  manage_dependencies.md  quickstart.md  troubleshooting.md
docs/api/: clients.md
docs/devices/: IPGEDFA.md  bobcat_camera.md  boxoptronics_edfa.md  keithley_2700.md  kinesis_motor.md  osa.md  oscilloscope.md  picoscope2000a.md  slm.md  standa_motor.md  tenma_psu.md  thorlabs_mpc320.md  thorlabs_pm.md  verdi.md  zaber_1d.md
docs/services/: overview.md  polarization_optimizer.md  s2_processing.md  s2_remote.md
docs/setups/: lpg.md
examples/: agilent_laser_example.py  ando_laser_example.py  arduino_adc_example.py  boxoptronics_edfa_example.py  osa_example.py  overview_example.py  picoscope2000a_square_examples.py  polarization_optimizer_example.py  tenma_psu_examples.py  thorlabs_mpc320_example.py  verdi_laser_example.py
src/clients/: ID800Client.py  arduino_adc_client.py  auth_manager.py  base_client.py  bobcat_client.py  boxoptronics_edfa_client.py  camera_models.py  chameleon_client.py  ipg_edfa_client.py  keithley2700_client.py  kinesis_motor_client.py  lab_overview_client.py  laser_base_clients.py  laser_clients.py  nktp_fs20_client.py  osa_clients.py  picoscope2000a_client.py  slm_client.py  (+12 more)
tools/: check_deps.py  link_clients.py  link_global.py  serve_docs.py  setup_venv.py  update_deps.py  update_venv.py
(+16 files in other folders)
