[project]
name = "lab-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel==6.30.1",
    "ipython==9.5.0",
    "matplotlib==3.10.6",
    "mkdocs-material==9.6.19",
    "mkdocstrings-python==1.18.2",
    "mkdocstrings==0.30.0",
    "numpy==2.3.2",
    "pyserial==3.5",
    "requests==2.32.5",
    "scipy>=1.16.3",
]
